# roomly

./: .env  .env.example  CHANGELOG_INTEGRATION.md  FRONTEND_API_MIGRATION.md  INTEGRATION_FRONTEND.md  LIKES_MATCHES_IMPLEMENTATION.md  QUICKSTART.md  README.md  docker-compose.yml  start.sh
back/: .env.example  .gitignore  BACKEND_COMPARISON.md  README.md  add_created_at.py  check_db_structure.py  clean_and_seed.py  create_2_more_listings.py  create_students.py  create_test_likes.py  create_test_messages.py  create_test_properties.py  main.py  (+9 more)
backend/: .env.example  Dockerfile  README.md  README_DEV.md  note.md  pyproject.toml  run_seed.py
backend/alembic/: env.py
backend/alembic/versions/: 39752876d24d_merge_heads.py  887566960987_initial_roomly_schema_fixed_2.py  add_avatar_url.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: amenities.py  auth.py  interactions.py  media.py  messages.py  notifications.py  profiles.py  properties.py  users.py  websocket.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  base_class.py  interaction.py  profile.py  property.py  user.py
backend/app/schemas/: interaction.py  profile.py  property.py  user.py
backend/app/services/: media.py  user_manager.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_amenities.py  test_auth.py  test_interactions.py  test_media.py  test_messages.py  test_notifications.py  test_profiles.py  test_properties.py  test_users.py
backend/tests/unit/: test_property_logic.py
(+167 files in other folders)
